--- a/релиз игры/buldoser/AdMediator.config
+++ b/релиз игры/buldoser/AdMediator.config
@@ -12,6 +12,10 @@
         <Name>GoogleAdMob</Name>
         <Weight>1</Weight>
       </AdAdapterInfo>
+      <AdAdapterInfo>
+        <Name>AdDuplex</Name>
+        <Weight>1</Weight>
+      </AdAdapterInfo>
     </AdAdapters>
     <AdControlConfigurations>
       <AdControlConfiguration>
@@ -24,6 +28,9 @@
               </Property>
             </Metadata>
             <Name>GoogleAdMob</Name>
+          </AdAdapterInfo>
+          <AdAdapterInfo>
+            <Name>AdDuplex</Name>
           </AdAdapterInfo>
         </AdAdapters>
         <Id>AdMediator-Id-0C0974CF-F41C-45BB-91F7-7CF3P310A107</Id>
@@ -44,6 +51,16 @@
         <Name>GoogleAdMob</Name>
         <Weight>1</Weight>
       </AdAdapterInfo>
+      <AdAdapterInfo>
+        <Metadata>
+          <Property>
+            <Key>AppId</Key>
+            <Value>0</Value>
+          </Property>
+        </Metadata>
+        <Name>AdDuplex</Name>
+        <Weight>1</Weight>
+      </AdAdapterInfo>
     </AdAdapters>
     <AdControlConfigurations>
       <AdControlConfiguration>
@@ -56,6 +73,9 @@
               </Property>
             </Metadata>
             <Name>GoogleAdMob</Name>
+          </AdAdapterInfo>
+          <AdAdapterInfo>
+            <Name>AdDuplex</Name>
           </AdAdapterInfo>
         </AdAdapters>
         <Id>AdMediator-Id-0C0974CF-F41C-45BB-91F7-7CF3P310A107</Id>
